Adding the updated files

--- a/index.html
+++ b/index.html
@@ -1,62 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xero Fitness</title>
+    <title>Vr World</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 </head>
-<body>
-    <!-- navigationbar starting  -->
-    <header>
-        <div class="uppercontainer">
-            <div class="leftcontainer">
-                <a href="#">Xero <em>Fitness</em> </a>
 
-            </div>
-            <div class="rightcontainer">
-                <nav class="navigationbar">
-                    <ul>
-                        <li class="Menu"><a href="#">Home</a></li>
-                        <li class="Menu"><a href="#">About </a></li>
-                        <li class="Menu"><a href="#">Services</a></li>
-                        <li class="Menu"><a href="#">Contact Us</a></li>
-                        <li class="btn"><a class="buttonhover" href="#">Sign Up</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+<body>
+    <!-- -- Navigation Bar Started -->
+    <header>
+        <a href=""><span> Virtual World </span></a>
+        <nav>
+            <ul>
+                <li><a href="">Home </a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Services</a></li>
+            </ul>
+        </nav>
+        <button class="btn">Purchase Now</button>
     </header>
-    <!-- navigationbar end -->
-    <div class="imageoverlay">
-        <div class="text"><h3>Work Harder,Get Stronger</h3>
-            <h2>Easy with our <em>Gym</em> </h2>
-        </div>
-        <div class="button">
-            <a href="#">Become a Member</a>
-        </div>
-    </div>
-    <div class="formcontainer">
-        <h1>Join the Best Gym Of Delhi Now</h1>
-        <form action="mailto:xeroabbas786@gmail.com" method="post">
-            <div class="formgroup">
-                <input type="text" name="" placeholder="Enter your Name">
-            </div>
-            <div class="formgroup">
-                <input type="text" name="" placeholder="Enter your age">
-            </div>
-            <div class="formgroup">
-                <input type="number" name="" placeholder="Enter your Phone Number">
-            </div>
-            <div class="formgroup">
-                <input type="text" name="" placeholder="Enter your gender">
-            </div>
-             <button class="btn"><a href="">Submit Now</a> </button>
-        </form>
-       
-    </div>
-    
+    <!-- -- Navigation Bar Completed -->
+    <!-- Main Content Area Started  -->
+    <section>
+        <h2>See the World through your eyes!</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum non quibusdam laborum pariatur, sint
+            blanditiis dolorum dolore beatae Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore libero
+            a
+            facilis porro velit itaque voluptatibus obcaecati reprehenderit inventore totam.</p>
+        <button id="btn">Get Started</button>
+    </section>
+    <!-- Main Content area ended -->
+    <!-- About us Section Started  -->
+        <!-- <section class="firstcontainer">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus cumque quod voluptas officiis
+                consequuntur, tenetur consectetur officia deleniti suscipit nulla culpa debitis id!</p>
+            <figure>
+                <img src="firstflex.jpg" alt="This is the first image of About us">
+            </figure>
+        </section>
+        <!-- 2nd Container for the three boxes -->
+        <!-- <section class="secondcontainer">
+
+        </section> --> -->
 </body>
+
 </html>
